# mp3-downloader

./: README.md
app/: .gitignore  Cargo.toml
app/src/: main.rs  search.rs
web/: package.json
web/.vim/: coc-settings.json
web/public/: index.html
web/src/: App.tsx  index.tsx  loading.css
