[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "0.6"
actix-cors = "0.6"
futures = "0.3"
actix-web-lab = "0.18"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1"
regex = "1"
once_cell = "1"
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }
json = "0.12.4"
